// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionHeader tests render default SectionHeader correctly 1`] = `
<DocumentFragment>
  .c2 {
  font-size: 1.25rem;
  line-height: 1.875rem;
  font-weight: 500;
  font-family: roboto;
  font-weight: 400;
  text-align: center;
  line-height: 1.6;
  font-family: 'Roboto',sans-serif;
  color: #757575;
}

.c1 {
  font-size: 1.5rem;
  line-height: 2.25rem;
  font-weight: 700;
  font-family: robotoFlex;
  font-size: 2.625rem;
  line-height: 1.4;
  text-align: center;
  margin-bottom: 0.5rem;
  font-family: 'Roboto Flex',sans-serif;
  color: #000000;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 720px;
}

<div
    class="c0"
  >
    <h2
      class="c1"
      color="#000000"
      font-family="robotoFlex"
      font-size="2.625rem"
    >
      Section Title
    </h2>
    <p
      class="c2"
      color="#757575"
      font-family="roboto"
      font-weight="400"
    >
      Section Text
    </p>
  </div>
</DocumentFragment>
`;

exports[`SectionHeader tests render large SectionHeader in dark mode 1`] = `
<DocumentFragment>
  .c2 {
  font-size: 1.25rem;
  line-height: 1.875rem;
  font-weight: 500;
  font-family: roboto;
  font-weight: 400;
  text-align: center;
  line-height: 1.6;
  font-family: 'Roboto',sans-serif;
  color: #CBCBCB;
}

.c1 {
  font-size: 1.5rem;
  line-height: 2.25rem;
  font-weight: 700;
  font-family: robotoFlex;
  font-size: 3.75rem;
  line-height: 1.4;
  text-align: center;
  margin-bottom: 0.5rem;
  font-family: 'Roboto Flex',sans-serif;
  color: #F6F6F6;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 720px;
  margin-bottom: 3.125rem;
}

<div
    class="c0"
  >
    <h1
      class="c1"
      color="#F6F6F6"
      font-family="robotoFlex"
      font-size="3.75rem"
    >
      Section Title
    </h1>
    <p
      class="c2"
      color="#CBCBCB"
      font-family="roboto"
      font-weight="400"
    >
      Section Text
    </p>
  </div>
</DocumentFragment>
`;
